Fix the invisible groups box not allowing clicks on items

--- a/MessagingClient/wwwroot/css/server.css
+++ b/MessagingClient/wwwroot/css/server.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: 0;
+    visibility: hidden;
 }
 
     #box-parent .box1 {
